--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="grid-snap">Drag me ^~^</div>
+    <div id="grid-snap-1" class="snap">Drag me ^~^</div>
+
+    <div id="grid-snap-2" class="snap">Drag me too</div>
 
     <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
     <script src="script.js"></script>
