--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <div id="grid-snap-2" class="snap">Drag me too</div>
 
+    <div id="grid-snap-3" class="snap">Drag me 🌲</div>
+
     <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
     <script src="script.js"></script>
   </body>
