--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="grid-snap-1" class="snap">Drag me ^~^</div>
+    <button id="add-button">Click to add a new item to the grid</button>
 
-    <div id="grid-snap-2" class="snap">Drag me too</div>
-
-    <div id="grid-snap-3" class="snap">Drag me 🌲</div>
+    <div id="grid">
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
-    <script src="script.js"></script>
+    <script src="scripts/drag.js"></script>
+    <script src="scripts/add.js"></script>
   </body>
 </html>
