--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drag Drop</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">  </head>
   <body>
-    <button id="add-button">Click to add a new item to the grid</button>
+    <div class="buttons">
+        <button id="add-button">Click to add a new item to the grid</button>
+        <button id="remove-all-button">Click to remove all items from grid</button>
+    </div>
 
     <div id="grid">
     </div>
