--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/interactjs/dist/interact.min.js"></script>
+    <script src="libs/leader-line.min.js"></script>
     <script src="scripts/drag.js"></script>
-    <script src="scripts/add.js"></script>
+    <script src="scripts/items.js"></script>
+    <script src="scripts/lines.js"></script>
   </body>
 </html>
